<resources>
    <string name="app_name">NavigationDrawerApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Artemis</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="password_repeat">Repeat Password</string>
    <string name="sign_up">Sign Up</string>

    <string name="sign_in">Sign In</string>
    <string name="ask_account">Don\'t you have an account?</string>
    <string name="forget_pass">Forget Password?</string>

    <string name="send">Send</string>

    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>

    <string name="description">Carpe Diem</string>
    <string name="link">Instagram Account</string>


</resources>
