<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.SignInActivity"
    android:background="@drawable/photo01"
    android:padding="30dp"
    >

    <EditText
        android:id="@+id/signIn_mail"
        android:hint="@string/mail"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginTop="150dp"
        />

    <EditText
        android:id="@+id/signIn_password"
        android:hint="@string/password"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signIn_mail"
        android:padding="12dp"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/signIn_button"
        android:text="@string/sign_in"
        android:textColor="@color/colorWhite"
        android:background="@color/colorSoftBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signIn_password"
        android:layout_marginTop="30dp"
        />

    <LinearLayout
        android:id="@+id/signIn_secondLY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@+id/signIn_button"
        android:padding="30dp"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:id="@+id/signIn_ask_account"
            android:text="@string/ask_account"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/signIn_sign_up"
            android:text="@string/sign_up"
            android:textSize="20sp"
            android:textColor="@color/colorSoftBlue"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            />

    </LinearLayout>

</RelativeLayout>