<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.SignUpActivity"
    android:background="@drawable/photo01"
    android:padding="30dp"
    >

    <EditText
        android:id="@+id/signUp_mail"
        android:hint="@string/mail"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:id="@+id/signUp_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUp_mail"
        android:padding="12dp"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/signUp_password_repeat"
        android:hint="@string/password_repeat"
        android:inputType="textPassword"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUp_password"
        android:padding="12dp"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/signUp_button"
        android:text="@string/sign_up"
        android:textColor="@color/colorWhite"
        android:background="@color/colorSoftBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUp_password_repeat"
        android:layout_marginTop="20dp"
        />

</RelativeLayout>